# orchestria

./: .gitignore  AutomacaoMedicao.spec  CLAUDE.md  Makefile  PROJECT_STRUCTURE.md  pyproject.toml  quality_baseline.json  requirements.txt  validar_consistencia.py
.claude/: PLUGINS.md  PROJECT_STRUCTURE.md  SESSION_STATE.md  settings.json
.claude/agents/: architect.md  code-reviewer.md  tdd-guide.md
.claude/commands/: compact.md  plan.md  review-boundary.md
.claude/hooks/: post-edit-py.sh  pre-edit-domain.sh  pre-edit-services.sh
.claude/rules/: boundary.md  build-smoke.md  coding-standards.md  column-mapping.md  data-loading.md  quality-gate.md  sqlite.md  tag-and-normalization.md  testing.md
app/: __init__.py  atestado.py  core.py  db.py  desktop_entry.py  distribuicao_contratual.py  excel.py  ferias.py  loaders.py  logging_config.py  main.py  paths.py  pipeline.py  treinamento.py  validar_distribuicao.py  validar_horas.py
assets/: base_treinamentos.xlsx  distribuicao_contratual_normalizada.xlsx
docs/: PROJECT_STRUCTURE.md
scripts/: diff_medicao.py
tests/: conftest.py  test_atestado_caracterizacao.py  test_atestado_equivalencia.py  test_atestado_pipeline.py  test_base_tags_repository.py  test_cli_normalizar_boundary.py  test_cobranca_sqlite.py  test_column_aliases.py  test_db.py  test_derivar_mes_referencia_ssot.py  test_desktop_entry_pywebview.py  test_distribuicao_caracterizacao.py  test_distribuicao_contract_guard.py  test_distribuicao_contratual.py  test_distribuicao_contratual_characterization.py  test_distribuicao_contratual_contract_guard.py  test_distribuicao_contratual_equivalence.py  test_distribuicao_contratual_integration.py  test_distribuicao_equivalencia.py  test_domain_distribuicao_contratual.py  test_excel.py  test_excel_distribuicao_contratual.py  test_ferias_caracterizacao.py  test_ferias_context.py  test_ferias_contract_guard.py  test_ferias_core.py  test_ferias_edge_cases.py  test_ferias_equivalencia.py  test_ferias_rules.py  test_ferias_tag_lookup.py  test_gui_handlers.py  test_idempotencia_treinamento.py  test_integration.py  test_layer_boundaries.py  test_logging_config.py  test_mes_referencia_relatorio_treinamento.py  test_multi_row_divergente.py  test_normalizar.py  test_obter_mes_referencia_lite.py  test_paths_exports.py  (+10 more)
ui/: gui.py  gui_handlers.py
(+105 files in other folders)
