[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestria"
version = "0.1.0"
description = "Automação de medição de mão-de-obra para manutenção petroquímica"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Manserv" }]

dependencies = [
    # GUI
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    # Excel / data
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "et_xmlfile==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "Pygments==2.20.0",
]
build = [
    "pyinstaller==6.19.0",
]

[project.scripts]
automacao = "app.main:main"

[tool.setuptools]
packages = ["app", "app.cli", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
