[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestria"
version = "0.1.0"
description = "Automação de medição de mão-de-obra para manutenção petroquímica"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Emerson" }]

dependencies = [
    # GUI
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    # Excel / data
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "et_xmlfile==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "Pygments==2.20.0",
    "ruff==0.14.3",
]
build = [
    "pyinstaller==6.19.0",
]

[project.scripts]
automacao = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "ui*"]
exclude = ["tests*", "build*", "dist*", "venv*", "venv_win*", "baseline*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["build", "dist", "venv", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B008",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "SIM115"]
"ui/gui.py" = ["E402"]
